--- a/index.html
+++ b/index.html
@@ -5,29 +5,33 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 	<body>
-		<p>Hi!</p>
-		<p>I'm Marcel Marki, a software developer living in Brooklyn, NY.</p>
-		<p>I like to build things.</p> <!--Should link down the page to work-->
-		<p>I'm currently:</p>
-		<ol>
-			<li>Solving problems for large public sector clients at <a href="http://www.tylertech.com">Tyler Technologies.</a></li>
-			<li>Sketching strange creatures &amp improbable buildings. </li>
-			<li>Teaching myself web development through a series of <a href="https://github.com/MMarki">experimental projects.</a></li>
-		</ol>
-		<!-- Github projects called WEEKENDS -->
-		<p>I care about: </p>
-		<ul>
-			<li>Writing maintainable, readable code.</li>
-			<li>The meaning of digital things in our lives.</li>
-			<li>Media literacy.</li>
-			<li>Intuitive design.</li>
-			<li>Storytelling.</li>
-			<li>Machine learning.</li>
-		</ul>
-		<p> Work: </p>
-		</ul>
-			<li><a href= "https://github.com/MMarki">Code</a></li>
-			<li><a href= "https://en.wikipedia.org/wiki/Writing">Writing</a></li>
-		</ul>
+		<div id="nav">
+			<h1><a href="index.html">Marcel Marki</a></h1>
+		</div>
+		<div id="content">
+			<p>Hi!</p>
+			<p>I'm Marcel Marki, a software developer living in Brooklyn, NY.</p>
+			<p>I like to build things.</p> <!--Should link down the page to work-->
+			<p>I'm currently:</p>
+			<ol>
+				<li>Solving problems for large public sector clients at <a class= "Tyler" href="http://www.tylertech.com">Tyler Technologies.</a></li>
+				<li>Sketching strange creatures &amp improbable buildings. </li>
+				<li>Teaching myself web development through a series of <a class="Github" href="https://github.com/MMarki">experimental projects.</a></li>
+			</ol>
+			<!-- Github projects called WEEKENDS -->
+			<p>I care about: </p>
+			<ul>
+				<li>Writing maintainable, readable code.</li>
+				<li>The meaning of digital things in our lives.</li>
+				<li>Media literacy.</li>
+				<li>Intuitive design.</li>
+				<li>Storytelling.</li>
+				<li>Machine learning.</li>
+			</ul>
+			<p> Work: </p>
+			<ul>
+				<li><a class="Github" href= "https://github.com/MMarki">Code</a></li>
+			</ul>
+		</div>
 	</body>
 </html>
