--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
 		<div id="nav">
-			<h1><a href="index.html">Marcel Marki</a></h1>
+			<h1><a class="title" href="index.html">Marcel Marki</a></h1>
 		</div>
 		<div id="content">
-			<p>Hi!</p>
-			<p>I'm Marcel Marki, a software developer living in Brooklyn, NY.</p>
-			<p>I like to build things.</p> <!--Should link down the page to work-->
+			<p class="workheader"> ~Hi!~ </p>
+			<p>I'm Marcel, a software developer living in Brooklyn, NY.</p>
+			<p>I like to build things that matter.</p> <!--Should link down the page to work-->
 			<p>I'm currently:</p>
 			<ol>
 				<li>Solving problems for large public sector clients at <a class= "Tyler" href="http://www.tylertech.com">Tyler Technologies.</a></li>
@@ -28,10 +28,23 @@
 				<li>Storytelling.</li>
 				<li>Machine learning.</li>
 			</ul>
-			<p> Work: </p>
-			<ul>
-				<li><a class="Github" href= "https://github.com/MMarki">Code</a></li>
-			</ul>
+			<hr class="style1">
+			<p class="workheader"> ~Code~ </p>
+			<div class="projects">
+				<a class="Github" href= "https://github.com/MMarki">Code</a>
+			</div>
+			<hr class="style1">
+			<p class="workheader"> ~Writing~ </p>
+			
+			<div class="projects">
+				<a class="Writing" href= "https://github.com/MMarki">Writing</a>
+			</div>
+			<hr class="style1">
+			<p class="workheader"> ~Art~ </p>
+			
+			<div class="projects">
+				<a class="Art" href= "https://github.com/MMarki">Art</a>
+			</div>
 		</div>
 	</body>
 </html>
