Bootstrap, Basic Nav and Page Layouts

--- a/index.html
+++ b/index.html
@@ -1,50 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Marcel Marki</title>
-		<link rel="stylesheet" type="text/css" href="style.css"/>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>HI WELCOME TO MY HYPERTEXT INTERNET WEBPAGE</title>
+        <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
+        <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
+		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
 	</head>
 	<body>
-		<div id="nav">
-			<h1><a class="title" href="index.html">Marcel Marki</a></h1>
-		</div>
+        <!--Navbar-->
+        <div>
+            <img class="img-profile" src="/img/img-profile.jpg">
+        </div>
 		<div id="content">
-			<p class="workheader"> ~Hi!~ </p>
+			<p class="workheader"> ~~~SUP DREKLORDS!~~~ </p>
 			<p>I'm Marcel, a software developer living in Brooklyn, NY.</p>
-			<p>I like to build things that matter.</p> <!--Should link down the page to work-->
 			<p>I'm currently:</p>
 			<ol>
 				<li>Solving problems for large public sector clients at <a class= "Tyler" href="http://www.tylertech.com">Tyler Technologies.</a></li>
-				<li>Sketching strange creatures &amp improbable buildings. </li>
-				<li>Teaching myself web development through a series of <a class="Github" href="https://github.com/MMarki">experimental projects.</a></li>
-			</ol>
-			<!-- Github projects called WEEKENDS -->
-			<p>I care about: </p>
-			<ul>
-				<li>Writing maintainable, readable code.</li>
-				<li>The meaning of digital things in our lives.</li>
-				<li>Media literacy.</li>
-				<li>Intuitive design.</li>
-				<li>Storytelling.</li>
-				<li>Machine learning.</li>
-			</ul>
-			<hr class="style1">
-			<p class="workheader"> ~Code~ </p>
-			<div class="projects">
-				<a class="Github" href= "https://github.com/MMarki">Code</a>
-			</div>
-			<hr class="style1">
-			<p class="workheader"> ~Writing~ </p>
-			
-			<div class="projects">
-				<a class="Writing" href= "https://github.com/MMarki">Writing</a>
-			</div>
-			<hr class="style1">
-			<p class="workheader"> ~Art~ </p>
-			
-			<div class="projects">
-				<a class="Art" href= "https://github.com/MMarki">Art</a>
-			</div>
+                <li>Teaching students how to code at <a class= "CodingSpace" href="http://www.thecodingspace.com/">The Coding Space.</a></li>
+                <li>Teaching myself UX Design.</li>
+            </ol>
+            <p><a class= "Writing" href="work.html">Work</a></p>
 		</div>
 	</body>
 </html>
