--- a/Portfolio Website/portfolio.html
+++ b/Portfolio Website/portfolio.html
@@ -43,21 +43,21 @@
                         <img class="img-work-page img-responsive" src="/img/img-placeholder.PNG" alt="Old Website">
                         <figcaption>Generic Bootstrap Website that did not reflect her personality.</figcaption>
                     </figure>
-                    <p>Our goal was to rebuild her website from the ground up with a focus on effectively showcasing her work and reflecting her personality. Bootstrap is very customizable, so I decided to leverage Bootstrap as a framework and write custom styling that extended the framework beyond its default look.
+                    <p>Our goal was to rebuild her website from the ground up with a focus on reflecting her personality and effectively showcasing her work. Bootstrap is very customizable, so I decided to leverage Bootstrap and write custom styling that extended the framework beyond its default look.
                     </p>
                     <h2><a id="sketching"></a>Sketching:</h2>
-                    <p>I generated a large volume of sketches to figure out how the website should be re-structured at the Information Architecture level and Navigation/Interface Design level.</p>
+                    <p>I drew some sketches to brainstorm how the website should be re-structured to improve information architecture, navigation, and interface design.</p>
                      <figure>
                         <img class="img-work-page img-responsive" src="/img/img-placeholder.PNG" alt="Sketches">
                         <figcaption>Sketches.</figcaption>
                     </figure>
                     <p>I regularly got feedback from Elissa so that we could iterate on these early sketches and come up with something that made sense.</p>
                     <h2><a id="code-prototyping"></a>Code Prototyping:</h2>
-                    <p>At this point, I jumped right into prototyping the project with code. Elissa wanted to get regular feedback so that she could help mould the site as it took its initial shape. I made the decision to skip over high-fidelity mockups because I knew I would be regularly meeting with Elissa and could save a ton of time by skipping high fidelity mockups. I built custom classes to handle navigation and layout, and I re-wrote most of the HTML to accomodate the new architecture of the website.</p>
+                    <p>At this point, I jumped right into prototyping the project with code. Elissa wanted to get regular feedback so that she could help mould the site as it took its initial shape. I made the decision to skip over high-fidelity mockups because I knew I would be regularly meeting with Elissa and could save a ton of time this way. I built custom classes to handle navigation and layout, and I re-wrote most of the HTML to accomodate the new architecture of the website.</p>
                     <h2><a id="branding"></a>Branding &amp; Visual Design:</h2>
-                    <p>Softness and approachability of lower-case letters, new logo with new logo colors, a grid of projects that mimick the gradient of the new logo.</p>
+                    <p>Since this was a personal website, I worked closely with Elissa to establish how the website should look. She wanted the softness and approachability of lower-case letters and pastel purples and blues. When she designed a new logo, I integrated the colors of the logo into the grid of projects. I used one of the purple colors throughout the website for links.</p>
                     <h2><a id="implementation"></a>Implementation:</h2>
-                    <p>I built the thing.</p>
+                    <p>I continued refinind the design of the website with a focus on making it responsive and easy to use.</p>
                 </section>
             </div>
         </div>
