--- a/Portfolio Website/work.html
+++ b/Portfolio Website/work.html
@@ -35,7 +35,7 @@
                     </div>
 
                     <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" href="portfolio.html">
+                        <a class= "image-link" href="moodboard.html">
                             <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
                         </a>
                     </div>
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" href="portfolio.html">
+                        <a class= "image-link" href="moodboard.html">
                             <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
                         </a>
                     </div>
@@ -59,7 +59,7 @@
                     </div>
 
                     <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" href="portfolio.html">
+                        <a class= "image-link" href="moodboard.html">
                             <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
                         </a>
                     </div>
