--- a/Portfolio Website/portfolio.html
+++ b/Portfolio Website/portfolio.html
@@ -27,8 +27,8 @@
         <div class="container-fluid">
             <div class="col-lg-12">
                 <section class="text-section">
-                    <h1>Building a Portfolio Website</h1>
-                    <p><a class="Github" href="#sketching">Sketching</a>
+                    <h1 class="work-header">Building a Portfolio Website</h1>
+                    <p class="work-tasks"><a class="Github" href="#sketching">Sketching</a>
                         |
                         <a class="Github" href="#code-prototyping">Code Prototyping</a>
                         |
@@ -40,7 +40,7 @@
                     <h2>The Problem:</h2>
                     <p>Elissa is an aspiring art director who built her own website using Bootstrap when she was in college. She didn't feel like the website that she had created was a good reflection of who she was as an artist and as a person. She felt it looked too much like a typical out-of-the box Bootstrap website.</p>
                     <figure>
-                        <img class="img-work-page img-responsive" src="/img/img-placeholder.PNG" alt="Old Website">
+                        <img class="img-work-page img-responsive" src="/img/Elissa/Elissa-old-website.PNG" alt="Old Website">
                         <figcaption>Generic Bootstrap Website that did not reflect her personality.</figcaption>
                     </figure>
                     <p>Our goal was to rebuild her website from the ground up with a focus on reflecting her personality and effectively showcasing her work. Bootstrap is very customizable, so I decided to leverage Bootstrap and write custom styling that extended the framework beyond its default look.
