--- a/Portfolio Website/work.html
+++ b/Portfolio Website/work.html
@@ -30,7 +30,7 @@
                 <div class="row-responsive">
                     <div class="col-md-6 col-sm-12 portfolio-item">
                         <a class= "image-link" href="portfolio.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
+                            <img src="img/Elissa/elissa-new-website.PNG" class="img-responsive" alt="Portfolio Image">
                         </a>
                     </div>
 
@@ -42,7 +42,7 @@
 
                     <div class="col-md-6 col-sm-12 portfolio-item">
                         <a class= "image-link" href="portfolio.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
+                            <img  src="img/Elissa/elissa-new-website.PNG" class="img-responsive" alt="Portfolio Image">
                         </a>
                     </div>
 
@@ -54,7 +54,7 @@
 
                     <div class="col-md-6 col-sm-12 portfolio-item">
                         <a class= "image-link" href="portfolio.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
+                            <img src="img/Elissa/elissa-new-website.PNG" class="img-responsive" alt="Portfolio Image">
                         </a>
                     </div>
 
