--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -12,7 +12,7 @@
         <div>
             <img class="img-profile" src="/img/img-profile.jpg">
         </div>
-		<section>
+		<section class="text-section-thin">
             <div class="col-lg-12">
                 <p>I'm Marcel, a software developer living in Brooklyn, NY.</p>
                 <p>I'm currently:</p>
