--- a/Portfolio Website/moodboard.html
+++ b/Portfolio Website/moodboard.html
@@ -27,8 +27,8 @@
         <div class="container-fluid">
             <div class="col-lg-12">
                 <section class="text-section">
-                    <h1>Designing a Digital Moodboard Tool</h1>
-                    <p><a class="Github" href="#sketching">Sketching</a>
+                    <h1 class="work-header">Designing a Digital Moodboard Tool</h1>
+                    <p class="work-tasks"><a class="Github" href="#sketching">Sketching</a>
                         |
                         <a class="Github" href="#wireframing">Wireframing</a>
                         |
