Updated Font, Navigation, Etc.

--- a/Portfolio Website/resume.html
+++ b/Portfolio Website/resume.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
         <!--Navbar-->
@@ -18,8 +19,8 @@
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="work.html">Work</a></li>
                   <li><a href="about-me.html">About Me</a></li>
-                  <li><a href="fun.html">Fun</a></li>
-                  <li class="active"><a href="resume.html"><span>R&eacute;sum&eacute;</span></a></li>
+                  <!--li><a href="fun.html">Fun</a></li-->
+                  <li class="active active-res"><a href="resume.html"><span>R&eacute;sum&eacute;</span></a></li>
                 </ul>
             </nav>
         </div>
