--- a/Portfolio Website/work.html
+++ b/Portfolio Website/work.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
         <!--Navbar-->
@@ -18,7 +19,7 @@
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="work.html"><span>Work</span></a></li>
                   <li><a href="about-me.html">About Me</a></li>
-                  <li><a href="fun.html">Fun</a></li>
+                  <!--li><a href="fun.html">Fun</a></li-->
                   <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
                 </ul>
             </nav>
@@ -28,39 +29,24 @@
         <section id="portfolio">
             <div class="container-responsive">
                 <div class="row-responsive">
-                    <div class="col-md-6 col-sm-12 portfolio-item">
+                    <div class="col-md-4 col-sm-12 portfolio-item">
                         <a class= "image-link" href="portfolio.html">
                             <img src="img/Elissa/elissa-new-website.PNG" class="img-responsive" alt="Portfolio Image">
+                            <p class="text">01<br/>Building an Art Director's Portfolio<br/>Design, Code</p>
                         </a>
                     </div>
 
-                    <div class="col-md-6 col-sm-12 portfolio-item">
+                    <div class="col-md-4 col-sm-12 portfolio-item">
                         <a class= "image-link" href="moodboard.html">
                             <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
+                            <p class="text">02<br/>Building a Digital Moodboard<br/>Design</p>
                         </a>
                     </div>
 
-                    <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" href="portfolio.html">
-                            <img  src="img/Elissa/elissa-new-website.PNG" class="img-responsive" alt="Portfolio Image">
-                        </a>
-                    </div>
-
-                    <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" href="moodboard.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
-                        </a>
-                    </div>
-
-                    <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" href="portfolio.html">
-                            <img src="img/Elissa/elissa-new-website.PNG" class="img-responsive" alt="Portfolio Image">
-                        </a>
-                    </div>
-
-                    <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" href="moodboard.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
+                    <div class="col-md-4 col-sm-12 portfolio-item">
+                        <a class= "image-link" href="twitter-bot.html">
+                            <img  src="img/Elissa/color-bot.PNG" class="img-responsive" alt="Portfolio Image">
+                            <p class="text">03<br/>Building a Twitter Bot For Designers<br/>Design, Code</p>
                         </a>
                     </div>
                 </div>
