--- a/Portfolio Website/about-me.html
+++ b/Portfolio Website/about-me.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
 		 <!--Navbar-->
@@ -17,38 +18,40 @@
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="work.html">Work</a></li>
-                    <li class="active"><a href="about-me.html"><span>About Me</span></a></li>
-                    <li><a href="fun.html">Fun</a></li>
+                    <li class="active active-about"><a href="about-me.html"><span>About Me</span></a></li>
+                    <!--li><a href="fun.html">Fun</a></li-->
                     <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
                 </ul>
             </nav>
         </div>
         
         <div class="container-responsive">
-                 <div class="row-fluid about-me-panel">
-                    <img class="img-profile img-responsive" src="/img/img-profile.jpg">
+            <div class="row-fluid">
+                <div class="col-lg-5">
+                   <img class="img-responsive" src="/img/img-profile.jpg">
                 </div>
-
-                <div class="row-fluid">
+                <div class="col-lg-7">
                     <section class="text-section">
-                        <div class="col-lg-12">
-                            <p>A few things about me:</p>
-                            <p>I want to make digital spaces smarter, more friendly, and more fulfilling places to work and play.</p>
-                            <p>I have a deep love for stories, game design, and illustration.</p>
-                            <p>In college, I built devices with Wiimotes, GPS technologies, microprocessors, pressure sensors, printed circuit boards, and Raspberry Pis. I made videogames in Unity. I learned about software development management, robotics, and Android app development.</p>  
-                            <p>Recently, I've been building web-apps and improving data integrity for the Public Sector, and teaching kids how to Code.</p>
-                            <p>I care about: </p>
-                            <ul class="bulletless">
-                                <li>Writing maintainable, readable code.</li>
-                                <li>The meaning of digital things in our lives.</li>
-                                <li>Media literacy.</li>
-                                <li>Intuitive design.</li>
-                                <li>Storytelling.</li>
-                                <li>Machine learning.</li>
-                            </ul>
-                        </div>
+                        <p>A few things about me:</p>
+                        <p>I want to make digital spaces smarter, more friendly, and more fulfilling places to work and play.</p>
+                        <p>I have a deep love for stories, game design, and illustration.</p>
+                        <p>In college, I built devices with Wiimotes, GPS technologies, microprocessors, pressure sensors, printed circuit boards, and Raspberry Pis. I made videogames in Unity. I learned about software development management, robotics, and Android app development.</p>  
+                        <p>Recently, I've been building web-apps and improving data integrity for the Public Sector, and teaching kids how to Code.</p>
+                        <p>I care about: </p>
+                        <ul class="bulletless">
+                            <li>Writing maintainable, readable code.</li>
+                            <li>The meaning of digital things in our lives.</li>
+                            <li>Media literacy.</li>
+                            <li>Intuitive design.</li>
+                            <li>Storytelling.</li>
+                            <li>Machine learning.</li>
+                        </ul>
                     </section>
-                </div>
+                    <section class="text-section">
+                            Let's make something magical! Email: ___ Social: ___
+                    </section>
+                </div> 
+            </div>
         </div>
 	</body>
 </html>
