--- a/Portfolio Website/fun.html
+++ b/Portfolio Website/fun.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
         <!--Navbar-->
@@ -25,7 +26,15 @@
         </div>
         
         <!--content-->
-         <!-- Portfolio Grid Section -->
-        
+         <div class="container-responsive">
+                <div class="row-fluid">
+                    <section class="text-section">
+                        <div class="col-lg-12">
+                            <p>What do I like to do for fun?</p>
+                            <p>Well: In my free time I like to explore New York, read, draw, write about game design, build videogames, and being silly[horse mask link]</p>
+                        </div>
+                    </section>
+                </div>
+        </div>
 	</body>
 </html>
