--- a/Portfolio Website/moodboard.html
+++ b/Portfolio Website/moodboard.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
         <!--Navbar-->
@@ -18,7 +19,7 @@
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="work.html"><span>Work</span></a></li>
                   <li><a href="about-me.html">About Me</a></li>
-                  <li><a href="fun.html">Fun</a></li>
+                  <!--li><a href="fun.html">Fun</a></li-->
                   <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
                 </ul>
             </nav>
@@ -68,7 +69,7 @@
                         Had to redesign the logo to create something more even looking, because it brought an uneven-ness to some screens. No element of design exists in a vacuum. You can try to apply the Waterfally method to design, but it's just going to reduce the quality of the final product.</p>
                     <h2><a id="mockups"></a>High-Fidelity Mockups:</h2>
                     <p>Built the mockups with a focus on the whole process. Empty states, changing sizes, all the modal windows a user might want.</p>
-                    
+                    <p>Tools Used: Illustrator, Photoshop, Pen &amp Paper, Wireframe.cc</p>
                 </section>
             </div>
         </div>
