--- a/Portfolio Website/twitter-bot.html
+++ b/Portfolio Website/twitter-bot.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>THAT ONE PROJECT I DID FOR ELISSA</title>
+		<title>THAT ONE ROBIT I MADE THAT DOES THE CULLURS</title>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
@@ -28,39 +28,37 @@
         <div class="container-fluid">
             <div class="col-lg-12">
                 <section class="text-section">
-                    <h1 class="work-header">Building a Portfolio Website</h1>
-                    <p class="work-tasks"><a class="Github" href="#sketching">Sketching</a>
+                    <h1 class="work-header">Building a Twitter Bot for Designers</h1>
+                    <p class="work-tasks"><a class="Github" href="#sketching">Research</a>
                         |
                         <a class="Github" href="#code-prototyping">Code Prototyping</a>
-                        |
-                        <a class="Github" href="#branding">Branding &amp; Visual Design</a>
                         |
                         <a class="Github" href="#implementation">Implementation</a>
                     </p>
                 
-                    <h2>The Problem:</h2>
-                    <p>Elissa is an aspiring art director who built her own website using Bootstrap when she was in college. She didn't feel like the website that she had created was a good reflection of who she was as an artist and as a person. She felt it looked too much like a typical out-of-the box Bootstrap website.</p>
+                    <h2>The Goal:</h2>
+                    <p>Wanted to make a minimalist tool for generating color palettes. Important that it not fall into the trappings of other Twitter bots. I didn't want to just be vomiting data out into the ether. I wanted users to interact with it.</p>
                     <figure>
                         <img class="img-work-page img-responsive" src="/img/Elissa/Elissa-old-website.PNG" alt="Old Website">
                         <figcaption>Generic Bootstrap Website that did not reflect her personality.</figcaption>
                     </figure>
                     <p>Our goal was to rebuild her website from the ground up with a focus on reflecting her personality and effectively showcasing her work. Bootstrap is very customizable, so I decided to leverage Bootstrap and write custom styling that extended the framework beyond its default look.
                     </p>
-                    <h2><a id="sketching"></a>Sketching:</h2>
-                    <p>I drew some sketches to brainstorm how the website should be re-structured to improve information architecture, navigation, and interface design.</p>
+                    <h2><a id="sketching"></a>Research:</h2>
+                    <p>color Schemer. The perfect art project bot. Wanted to make something more stripped down and usable. It's important that users can copy the color values and paste them into a color editor.</p>
                      <figure>
                         <img class="img-work-page img-responsive" src="/img/img-placeholder.PNG" alt="Sketches">
                         <figcaption>Sketches.</figcaption>
                     </figure>
                     <p>I regularly got feedback from Elissa so that we could iterate on these early sketches and come up with something that made sense.</p>
                     <h2><a id="code-prototyping"></a>Code Prototyping:</h2>
-                    <p>At this point, I jumped right into prototyping the project with code. Elissa wanted to get regular feedback so that she could help mould the site as it took its initial shape. I made the decision to skip over high-fidelity mockups because I knew I would be regularly meeting with Elissa and could save a ton of time this way. I built custom classes to handle navigation and layout, and I re-wrote most of the HTML to accomodate the new architecture of the website.</p>
-                    <h2><a id="branding"></a>Branding &amp; Visual Design:</h2>
-                    <p>Since this was a personal website, I worked closely with Elissa to establish how the website should look. She wanted the softness and approachability of lower-case letters and pastel purples and blues. When she designed a new logo, I integrated the colors of the logo into the grid of projects. I used one of the purple colors throughout the website for links.</p>
+                    <p>General Bot Structure-
+                    Built color harmonies. In my experience, all the most effective harmony algorithms worked with hsv or hls, but I wanted my interface to be RGB, so I wrote utility functions to convert between the two, then wrote a bunch of harmony algorithms.
+
+                    List the harmonies used, with pictures-</p>
                     <h2><a id="implementation"></a>Implementation:</h2>
-                    <p>I continued refinind the design of the website with a focus on making it responsive and easy to use.</p>
-                    
-                    <p>Tools Used: Pen &amp Paper, HTML, CSS, Bootstrap</p>
+                    <p>Testing, Hosting, etc.</p>
+                    <p>Tools Used: Python, Twitter API</p>
                 </section>
             </div>
         </div>
