--- a/Portfolio Website/about-me.html
+++ b/Portfolio Website/about-me.html
@@ -27,7 +27,7 @@
         
         <div class="container-responsive">
             <div class="row-fluid">
-                <div class="col-lg-5">
+                <div class="col-lg-5 col-sm-4">
                    <img class="img-responsive" src="/img/img-profile.jpg">
                 </div>
                 <div class="col-lg-7">
