--- a/Portfolio Website/moodboard.html
+++ b/Portfolio Website/moodboard.html
@@ -69,7 +69,7 @@
                         Had to redesign the logo to create something more even looking, because it brought an uneven-ness to some screens. No element of design exists in a vacuum. You can try to apply the Waterfally method to design, but it's just going to reduce the quality of the final product.</p>
                     <h2><a id="mockups"></a>High-Fidelity Mockups:</h2>
                     <p>Built the mockups with a focus on the whole process. Empty states, changing sizes, all the modal windows a user might want.</p>
-                    <p>Tools Used: Illustrator, Photoshop, Pen &amp Paper, Wireframe.cc</p>
+                    <p class="tools">Tools Used: Illustrator, Photoshop, Pen &amp Paper, Wireframe.cc</p>
                 </section>
             </div>
         </div>
