--- a/Portfolio Website/portfolio.html
+++ b/Portfolio Website/portfolio.html
@@ -60,7 +60,7 @@
                     <h2><a id="implementation"></a>Implementation:</h2>
                     <p>I continued refinind the design of the website with a focus on making it responsive and easy to use.</p>
                     
-                    <p>Tools Used: Pen &amp Paper, HTML, CSS, Bootstrap</p>
+                    <p class="tools">Tools Used: Pen &amp Paper, HTML, CSS, Bootstrap</p>
                 </section>
             </div>
         </div>
