--- a/Portfolio Website/twitter-bot.html
+++ b/Portfolio Website/twitter-bot.html
@@ -58,7 +58,7 @@
                     List the harmonies used, with pictures-</p>
                     <h2><a id="implementation"></a>Implementation:</h2>
                     <p>Testing, Hosting, etc.</p>
-                    <p>Tools Used: Python, Twitter API</p>
+                    <p class="tools">Tools Used: Python, Twitter API</p>
                 </section>
             </div>
         </div>
