--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -15,7 +15,7 @@
         </div>
 		<section class="text-section-thin">
             <div class="col-lg-12">
-                <p>I'm Marcel, a software developer living in Brooklyn, NY.</p>
+                <p>I'm Marcel, a software developer and UX designer living in Brooklyn, NY.</p>
                 <p>I'm currently:</p>
                 <ol>
                     <li>Solving problems for large public sector clients at <a class= "Green" href="http://www.tylertech.com">Tyler Technologies.</a></li>
@@ -24,7 +24,7 @@
                 </ol>
             </div>
             <div class="text-center">
-                <p><a class= "Red" href="work.html">Work</a></p>
+                <p><a class="Red" href="work.html">Work</a></p>
             </div>
         </section>
 	</body>
