About Me, Mouseover thumbnail changes

--- a/Portfolio Website/about-me.html
+++ b/Portfolio Website/about-me.html
@@ -34,9 +34,8 @@
                     <section class="text-section">
                         <p>A few things about me:</p>
                         <p>I want to make digital spaces smarter, more friendly, and more fulfilling places to work and play.</p>
-                        <p>I have a deep love for stories, game design, and illustration.</p>
-                        <p>In college, I built devices with Wiimotes, GPS technologies, microprocessors, pressure sensors, printed circuit boards, and Raspberry Pis. I made videogames in Unity. I learned about software development management, robotics, and Android app development.</p>  
-                        <p>Recently, I've been building web-apps and improving data integrity for the Public Sector, and teaching kids how to Code.</p>
+                        <p>I am obsessed with interactive media and have a deep love for stories, game design, and illustration.</p>
+                        <p>My influences include LEGO, the original Star Wars Trilogy, Studio Ghibli, Brett Victor, Don Norman, Hidetaka Miyazaki, and the guy who made <a href="./img/trash-dove.gif">this GIF.</a></p>
                         <p>I care about: </p>
                         <ul class="bulletless">
                             <li>Writing maintainable, readable code.</li>
