--- a/Portfolio Website/work.html
+++ b/Portfolio Website/work.html
@@ -32,21 +32,27 @@
                     <div class="col-md-4 col-sm-12 portfolio-item">
                         <a class= "image-link" href="portfolio.html">
                             <img src="img/Elissa/elissa-new-website.PNG" class="img-responsive" alt="Portfolio Image">
-                            <p class="text">01<br/>Building an Art Director's Portfolio<br/>Design, Code</p>
+                            <div class="thumb-overlay">
+                                <p class="text">01<br/>Building an Art Director's Portfolio<br/>Design, Code</p>
+                            </div>
                         </a>
                     </div>
 
                     <div class="col-md-4 col-sm-12 portfolio-item">
                         <a class= "image-link" href="moodboard.html">
                             <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
-                            <p class="text">02<br/>Building a Digital Moodboard<br/>Design</p>
+                            <div class="thumb-overlay">
+                                <p class="text">02<br/>Building a Digital Moodboard<br/>Design</p>
+                            </div>
                         </a>
                     </div>
 
                     <div class="col-md-4 col-sm-12 portfolio-item">
                         <a class= "image-link" href="twitter-bot.html">
                             <img  src="img/Elissa/color-bot.PNG" class="img-responsive" alt="Portfolio Image">
-                            <p class="text">03<br/>Building a Twitter Bot For Designers<br/>Design, Code</p>
+                            <div class="thumb-overlay">
+                                <p class="text">03<br/>Building a Twitter Bot For Designers<br/>Design, Code</p>
+                            </div>
                         </a>
                     </div>
                 </div>
