--- a/Portfolio Website/resume.html
+++ b/Portfolio Website/resume.html
@@ -24,5 +24,15 @@
                 </ul>
             </nav>
         </div>
+        
+         <div class="container-responsive">
+            <div class="row-fluid">
+                <div class="col-lg-12 col-sm-12">
+                    <a href="./img/marcel-marki-resume.pdf">
+                       <img class="img-responsive" src="/img/marcel-marki-resume.png">
+                    </a>
+                </div>
+            </div>
+        </div>
 	</body>
 </html>
