Updated About Me Section and Work Thumbnails

--- a/Portfolio Website/about-me.html
+++ b/Portfolio Website/about-me.html
@@ -33,7 +33,7 @@
                 <div class="col-lg-7">
                     <section class="text-section">
                         <p>A few things about me:</p>
-                        <p>I want to make digital spaces smarter, more friendly, and more fulfilling places to work and play.</p>
+                        <p>I want to make friendlier digital spaces, smarter digital tools, and more fulfilling digital experiences.</p>
                         <p>I am obsessed with interactive media and have a deep love for stories, game design, and illustration.</p>
                         <p>My influences include LEGO, the original Star Wars Trilogy, Studio Ghibli, Brett Victor, Don Norman, Hidetaka Miyazaki, and the guy who made <a href="./img/trash-dove.gif">this GIF.</a></p>
                         <p>I care about: </p>
