--- a/Portfolio Website/resume.html
+++ b/Portfolio Website/resume.html
@@ -28,8 +28,8 @@
          <div class="container-responsive">
             <div class="row-fluid">
                 <div class="col-lg-12 col-sm-12">
-                    <a href="./img/marcel-marki-resume.pdf">
-                       <img class="img-responsive" src="/img/marcel-marki-resume.png">
+                    <a class="resume-link" href="./img/marcel-marki-resume.pdf">
+                       <img class="img-responsive img-resume" src="/img/marcel-marki-resume.png">
                     </a>
                 </div>
             </div>
