About Me Page Revamped

--- a/Portfolio Website/about-me.html
+++ b/Portfolio Website/about-me.html
@@ -27,12 +27,12 @@
         
         <div class="container-responsive">
             <div class="row-fluid">
-                <div class="col-lg-5 col-sm-4">
+                <div class="col-md-5">
                    <img class="img-responsive" src="/img/img-profile.jpg">
                 </div>
-                <div class="col-lg-7">
+                <div class="col-md-7">
                     <section class="text-section">
-                        <p>A few things about me:</p>
+                        <h2>A few things about me:</h2>
                         <p>I want to make friendlier digital spaces, smarter digital tools, and more fulfilling digital experiences.</p>
                         <p>I am obsessed with interactive media and have a deep love for stories, game design, and illustration.</p>
                         <p>My influences include LEGO, the original Star Wars Trilogy, Studio Ghibli, Brett Victor, Don Norman, Hidetaka Miyazaki, and the guy who made <a href="./img/trash-dove.gif">this GIF.</a></p>
@@ -47,7 +47,15 @@
                         </ul>
                     </section>
                     <section class="text-section">
-                            Let's make something magical! Email: ___ Social: ___
+                            <p>Let's make something magical:</p>
+                            <p> Email:
+                                <a href="mailto:marcelmarki1@gmail.com?Subject=Hello%20Marcel" target="_top">marcelmarki1@gmail.com</a>
+                            </p>
+                            <p> Social:
+                                <a href="">Facebook</a> | 
+                                <a href="">LinkedIn</a> | 
+                                <a href="">Behance</a>
+                            </p>
                     </section>
                 </div> 
             </div>
