--- a/fun.html
+++ b/fun.html
@@ -3,24 +3,38 @@
 	<head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>DON'T BE MADE THAT I"M DOIN ME BETTER THAN YOU DOIN YOU</title>
+		<title>DON'T BE MAD THAT I"M DOIN ME BETTER THAN YOU DOIN YOU</title>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
         <!--Navbar-->
-        <nav class="navbar navbar-default">
-            <div class="navbar-header">
-              <a class="navbar-brand" href="work.html">Marcel Marki</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="work.html">Work</a></li>
-              <li><a href="about-me.html">About Me</a></li>
-              <li><a href="fun.html">Fun</a></li>
-              <li><a href="resume.html">R&eacutesum&eacute</a></li>
-            </ul>
-        </nav>
+        <div class="container-fluid">
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                  <a class="navbar-brand" href="work.html">Marcel Marki</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="work.html">Work</a></li>
+                  <li><a href="about-me.html">About Me</a></li>
+                  <li class="active"><a href="fun.html"><span>Fun</span></a></li>
+                  <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
+                </ul>
+            </nav>
+        </div>
         
+        <!--content-->
+         <div class="container-responsive">
+                <div class="row-fluid">
+                    <section class="text-section">
+                        <div class="col-lg-12">
+                            <p>What do I like to do for fun?</p>
+                            <p>Well: In my free time I like to explore New York, read, draw, write about game design, build videogames, and being silly[horse mask link]</p>
+                        </div>
+                    </section>
+                </div>
+        </div>
 	</body>
 </html>
