--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
-        <!--Navbar-->
         <div>
-            <img class="img-profile" src="/img/img-profile.jpg">
+            <img class="img-profile" src="./img/img-profile.jpg">
         </div>
-		<div id="content">
-			<p class="workheader"> ~~~SUP DREKLORDS!~~~ </p>
-			<p>I'm Marcel, a software developer living in Brooklyn, NY.</p>
-			<p>I'm currently:</p>
-			<ol>
-				<li>Solving problems for large public sector clients at <a class= "Tyler" href="http://www.tylertech.com">Tyler Technologies.</a></li>
-                <li>Teaching students how to code at <a class= "CodingSpace" href="http://www.thecodingspace.com/">The Coding Space.</a></li>
-                <li>Teaching myself UX Design.</li>
-            </ol>
-            <p><a class= "Writing" href="work.html">Work</a></p>
-		</div>
+		<section class="text-section-thin">
+            <div class="col-lg-12">
+                <p>I'm Marcel, a software developer and UX designer living in Brooklyn, NY.</p>
+                <p>I'm currently:</p>
+                <ol>
+                    <li>Solving problems for large public sector clients at <a class= "Green" href="http://www.tylertech.com">Tyler Technologies.</a></li>
+                    <li>Teaching students how to code at <a class= "Blue" href="http://www.thecodingspace.com/">The Coding Space.</a></li>
+                    <li>Teaching myself UX Design.</li>
+                </ol>
+            </div>
+            <div class="text-center">
+                <p><a class="Red" href="work.html">Work</a></p>
+            </div>
+        </section>
 	</body>
 </html>
