--- a/resume.html
+++ b/resume.html
@@ -7,19 +7,32 @@
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
         <!--Navbar-->
-        <nav class="navbar navbar-default">
-            <div class="navbar-header">
-              <a class="navbar-brand" href="work.html">Marcel Marki</a>
+        <div class="container-fluid">
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                  <a class="navbar-brand" href="work.html">Marcel Marki</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="work.html">Work</a></li>
+                  <li><a href="about-me.html">About Me</a></li>
+                  <!--li><a href="fun.html">Fun</a></li-->
+                  <li class="active active-res"><a href="resume.html"><span>R&eacute;sum&eacute;</span></a></li>
+                </ul>
+            </nav>
+        </div>
+        
+         <div class="container-responsive">
+            <div class="row-fluid">
+                <div class="col-lg-12">
+                    <a class="resume-link" href="./img/marcel-marki-resume.pdf">
+                       <img class="img-responsive img-resume" src="/img/marcel-marki-resume.png">
+                    </a>
+                </div>
             </div>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="work.html">Work</a></li>
-              <li><a href="about-me.html">About Me</a></li>
-              <li><a href="fun.html">Fun</a></li>
-              <li><a href="resume.html">R&eacutesum&eacute</a></li>
-            </ul>
-        </nav>
+        </div>
 	</body>
 </html>
