--- a/work.html
+++ b/work.html
@@ -7,58 +7,51 @@
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap.css"/>
         <link rel="stylesheet" type="text/css" href=".\css\bootstrap-responsive.css"/>
 		<link rel="stylesheet" type="text/css" href=".\css\style.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
 	</head>
 	<body>
         <!--Navbar-->
-        <nav class="navbar navbar-default">
-            <div class="navbar-header">
-              <a class="navbar-brand" href="work.html">Marcel Marki</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="work.html">Work</a></li>
-              <li><a href="about-me.html">About Me</a></li>
-              <li><a href="fun.html">Fun</a></li>
-              <li><a href="resume.html">R&eacutesum&eacute</a></li>
-            </ul>
-        </nav>
+        <div class="container-fluid">
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                  <a class="navbar-brand" href="work.html">Marcel Marki</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="active"><a href="work.html"><span>Work</span></a></li>
+                  <li><a href="about-me.html">About Me</a></li>
+                  <!--li><a href="fun.html">Fun</a></li-->
+                  <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
+                </ul>
+            </nav>
+        </div>
         
         <!-- Portfolio Grid Section -->
         <section id="portfolio">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-sm-12 portfolio-item">
-                        <a href="portfolio.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
+            <div class="container-responsive">
+                <div class="row-responsive">
+                    <div class="col-md-6 col-sm-12 portfolio-item">
+                        <a class= "image-link" style="background-image:url('./img/Elissa/elissa-cover.PNG');" href="portfolio.html">
+                            <div class="thumb-overlay">
+                                <p class="text">01<br/>Building an Art Director's Portfolio<br/>Design, Code</p>
+                            </div>
                         </a>
                     </div>
 
-                    <div class="col-md-4 col-sm-12 portfolio-item">
-                        <a href="portfolio.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
+                    <div class="col-md-6 col-sm-12 portfolio-item">
+                        <a class= "image-link" style="background-image:url('./img/Moodboard-final/moodboard-main.PNG');" href="moodboard.html">
+                            <!--img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image"-->
+                            <div class="thumb-overlay">
+                                <p class="text">02<br/>Building a Digital Moodboard<br/>Design</p>
+                            </div>
                         </a>
                     </div>
 
-                    <div class="col-md-4 col-sm-12 portfolio-item">
-                        <a href="portfolio.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
-                        </a>
-                    </div>
-
-                    <div class="col-md-4 col-sm-12 portfolio-item">
-                        <a href="portfolio.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
-                        </a>
-                    </div>
-
-                    <div class="col-md-4 col-sm-12 portfolio-item">
-                        <a href="portfolio.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
-                        </a>
-                    </div>
-
-                    <div class="col-md-4 col-sm-12 portfolio-item">
-                        <a href="portfolio.html">
-                            <img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image">
+                    <div class="col-md- col-sm-12 portfolio-item">
+                        <a class= "image-link" style="background-image:url('./img/color-bot.PNG');" href="twitter-bot.html">
+                            <!--img  src="img/Elissa/color-bot.PNG" class="img-responsive" alt="Portfolio Image"-->
+                            <div class="thumb-overlay">
+                                <p class="text">03<br/>Building a Twitter Bot For Designers<br/>Design, Code</p>
+                            </div>
                         </a>
                     </div>
                 </div>
