Fixed GIF, new cover images
also, new copy.

--- a/moodboard.html
+++ b/moodboard.html
@@ -69,8 +69,8 @@
                     <h2><a id="branding"></a>Branding &amp; Visual Design:</h2>
                     <p>Worked to make the UI unintrusive. Chose a pleasant, undistracting color palette that was predominantly greys and blues. </p>
                     <figure>
-                        <img class="img-work-page img-responsive" src="./img/img-placeholder.PNG" alt="Color Palette">
-                        <figcaption>Color Palette</figcaption>
+                        <img class="img-work-page img-responsive" src="./img/img-placeholder.PNG" alt="Style Guide">
+                        <figcaption>Moodboard Styleguide</figcaption>
                     </figure>
                     <p>
                         Designed the logo to be representative of the output of the tool. Many changes to branding and the styleguide occured even into the mockup phase as I worked on the real UI.
@@ -78,7 +78,13 @@
                             <img class="gif-work-page img-responsive" src="./img/Moodboard-Final/logo-evolution.gif" alt="Logo Gif">
                             <figcaption>Logo Evolution</figcaption>
                         </figure>
-                        Had to redesign the logo to create something more even looking, because it brought an uneven-ness to some screens. No element of design exists in a vacuum. You can try to apply the Waterfally method to design, but it's just going to reduce the quality of the final product.</p>
+                        
+                        One of the changes I made to the logo during the mockup process was that it looked uneven over text. 
+                        <figure>
+                            <img class="gif-work-page img-responsive" src="./img/Moodboard-Final/UnEven.PNG" alt="UnEven Logo">
+                            <figcaption>Logo looking uneven over text</figcaption>
+                        </figure>
+                        No element of design exists in a vacuum. You can try to apply the Waterfall method when you design, but it's just going to reduce the quality of the final product.</p>
                     
                     <h2><a id="mockups"></a>High-Fidelity Mockups:</h2>
                     <p>Built the mockups with a focus on the whole process. Empty states, changing sizes, all the modal windows a user might want.</p>
