--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
                     </div>
 
                     <div class="col-md-6 col-sm-12 portfolio-item">
-                        <a class= "image-link" style="background-image:url('./img/Moodboard-final/moodboard-main.PNG');" href="moodboard.html">
+                        <a class= "image-link" style="background-image:url('./img/Moodboard-final/moodboard-cover.PNG');" href="moodboard.html">
                             <!--img src="img/img-placeholder.PNG" class="img-responsive" alt="Portfolio Image"-->
                             <div class="thumb-overlay">
                                 <p class="text">02<br/>Building a Digital Moodboard<br/>Design</p>
@@ -46,8 +46,8 @@
                         </a>
                     </div>
 
-                    <div class="col-md- col-sm-12 portfolio-item">
-                        <a class= "image-link" style="background-image:url('./img/color-bot.PNG');" href="twitter-bot.html">
+                    <div class="col-md-6 col-sm-12 portfolio-item">
+                        <a class= "image-link" style="background-image:url('./img/color-bot-cover.PNG');" href="twitter-bot.html">
                             <!--img  src="img/Elissa/color-bot.PNG" class="img-responsive" alt="Portfolio Image"-->
                             <div class="thumb-overlay">
                                 <p class="text">03<br/>Building a Twitter Bot For Designers<br/>Design, Code</p>
