--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,14 @@
                     <p>Since this was a personal website, I worked closely with Elissa to establish how the website should look. She wanted the softness and approachability of lower-case letters and pastel purples and blues. When she designed a new logo, I integrated the colors of the logo into the grid of projects. I used one of the purple colors throughout the website for links.</p>
                     <h2><a id="implementation"></a>Implementation:</h2>
                     <p>I continued refinind the design of the website with a focus on making it responsive and easy to use.</p>
-                    
+                    <figure>
+                        <img class="img-work-page-half img-responsive" src="./img/Elissa/elissa-website-iphone.PNG" alt="Styleguide">
+                        <figcaption>Mobile View</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="img-work-page-half img-responsive" src="./img/Elissa/elissa-website-ipad.PNG" alt="Styleguide">
+                        <figcaption>Tablet View</figcaption>
+                    </figure>
                     <p class="tools">Tools Used: Pen &amp Paper, HTML, CSS, Bootstrap</p>
                 </section>
             </div>
