--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
             <div class="row-fluid">
                 <div class="col-lg-12">
                     <a class="resume-link" href="./img/marcel-marki-resume.pdf">
-                       <img class="img-responsive img-resume" src="/img/marcel-marki-resume.png">
+                       <img class="img-responsive img-resume" src="./img/marcel-marki-resume.png">
                     </a>
                 </div>
             </div>
